	data frames} now throws a warning and may become defunct in the
      future. If partial matching is intended, replace \code{foo$bar}
      by \code{foo[["bar", exact = FALSE]]}.

      \item [Not later than May 10] The long-deprecated use of
      \code{\\synopsis} in the \samp{Usage} section of \file{.Rd} files
      has been removed.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.0.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{chooseCRANmirror()} and \code{chooseBioCmirror()} gain
      an \code{ind} argument (like \code{setRepositories()}).

      \item \code{mcparallel} has a new argument \code{mc.interactive}
      which can modify the interactive flag in the child process. The
      new default is \code{FALSE} which makes child processes
      non-interactive by default (this prevents lock-ups due to children
      waiting for interactive input).
      
      \item \code{scan()} now warns when end-of-file occurs within
      a quoted string.
      
      \item \code{count.fields()} is now consistent with \code{scan()}
      in handling newlines in quoted strings.  Instead of triggering
      an error, this results in the current line receiving \code{NA}
      as the field count, with the next line getting the total count
      of the two lines.      
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD config} now make use of personal
      \file{Makevars} files under \file{~/.R} and a site file
      \file{Makevars.site}, in the same way as \command{R CMD SHLIB} and
      \command{R CMD INSTALL}.  This makes the utility more useful in
      package \command{configure} scripts.

      On Windows finding the personal files may require the environment
      variable \env{HOME} set.

      The old behaviour can be obtained with the new options
      \option{--no-user-files} and \option{--no-site-files}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{